Remove conflicting CorsConfig and update SecurityConfig